# aoc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/2015/day01/: sol.rs
src/2015/day02/: sol.rs
src/2020/day01/: sol.rs
src/2020/day02/: sol.rs
src/2020/day03/: sol.rs
src/2022/day01/: sol.rs
src/2022/day02/: sol.rs
src/2022/day03/: sol.rs
src/2022/day04/: sol.rs
src/2022/day05/: sol.rs
src/2022/day06/: sol.rs
src/2022/day11/: sol.rs
src/year_2015/day_01/: mod.rs
