[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Year 2015
[[bin]]
name = "2015-01"
path = "src/2015/day01/sol.rs"

[[bin]]
name = "2015-02"
path = "src/2015/day02/sol.rs"


# Year 2022
[[bin]]
name = "2022-01"
path = "src/2022/day01/sol.rs"

[[bin]]
name = "2022-02"
path = "src/2022/day02/sol.rs"

[[bin]]
name = "2022-03"
path = "src/2022/day03/sol.rs"

[[bin]]
name = "2022-04"
path = "src/2022/day04/sol.rs"

[[bin]]
name = "2022-05"
path = "src/2022/day05/sol.rs"

[[bin]]
name = "2022-11"
path = "src/2022/day11/sol.rs"